Java - Refactor examples to use "var"; fixes some broken examples