@@ -1,53 +1,48 @@
-import com.dropbox.sign.ApiClient;
 import com.dropbox.sign.ApiException;
 import com.dropbox.sign.Configuration;
 import com.dropbox.sign.api.*;
-import com.dropbox.sign.auth.HttpBasicAuth;
-import com.dropbox.sign.auth.HttpBearerAuth;
+import com.dropbox.sign.auth.*;
 import com.dropbox.sign.model.*;
-import com.dropbox.sign.model.SubOAuth.ScopesEnum;
 
 import java.io.File;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 public class Example {
     public static void main(String[] args) {
-        ApiClient apiClient = Configuration.getDefaultApiClient();
+        var apiClient = Configuration.getDefaultApiClient();
 
         // Configure HTTP basic authorization: api_key
-        HttpBasicAuth apiKey = (HttpBasicAuth) apiClient
+        var apiKey = (HttpBasicAuth) apiClient
             .getAuthentication("api_key");
         apiKey.setUsername("YOUR_API_KEY");
 
         // or, configure Bearer (JWT) authorization: oauth2
         /*
-        HttpBearerAuth oauth2 = (HttpBearerAuth) apiClient
+        var oauth2 = (HttpBearerAuth) apiClient
             .getAuthentication("oauth2");
-
         oauth2.setBearerToken("YOUR_ACCESS_TOKEN");
         */
 
-        ApiAppApi apiAppApi = new ApiAppApi(apiClient);
+        var apiAppApi = new ApiAppApi(apiClient);
 
-        SubOAuth oauth = new SubOAuth()
+        var oauth = new SubOAuth()
             .callbackUrl("https://example.com/oauth")
-            .scopes(Arrays.asList(ScopesEnum.BASIC_ACCOUNT_INFO, ScopesEnum.REQUEST_SIGNATURE));
+            .scopes(List.of(SubOAuth.ScopesEnum.BASIC_ACCOUNT_INFO, SubOAuth.ScopesEnum.REQUEST_SIGNATURE));
 
-        SubWhiteLabelingOptions whiteLabelingOptions = new SubWhiteLabelingOptions()
+        var whiteLabelingOptions = new SubWhiteLabelingOptions()
             .primaryButtonColor("#00b3e6")
             .primaryButtonTextColor("#ffffff");
 
-        File customLogoFile = new File("CustomLogoFile.png");
+        var customLogoFile = new File("CustomLogoFile.png");
 
-        ApiAppUpdateRequest data = new ApiAppUpdateRequest()
+        var data = new ApiAppUpdateRequest()
             .name("My Production App")
-            .domains(Collections.singletonList("example.com"))
+            .domains(List.of("example.com"))
             .oauth(oauth)
             .whiteLabelingOptions(whiteLabelingOptions)
             .customLogoFile(customLogoFile);
 
-        String clientId = "0dd3b823a682527788c4e40cb7b6f7e9";
+        var clientId = "0dd3b823a682527788c4e40cb7b6f7e9";
 
         try {
             ApiAppGetResponse result = apiAppApi.apiAppUpdate(clientId, data);
