@@ -1,47 +1,44 @@
-import com.dropbox.sign.ApiClient;
 import com.dropbox.sign.ApiException;
 import com.dropbox.sign.Configuration;
 import com.dropbox.sign.api.*;
-import com.dropbox.sign.auth.HttpBasicAuth;
+import com.dropbox.sign.auth.*;
 import com.dropbox.sign.model.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Example {
     public static void main(String[] args) {
-        ApiClient apiClient = Configuration.getDefaultApiClient();
+        var apiClient = Configuration.getDefaultApiClient();
 
         // Configure HTTP basic authorization: api_key
-        HttpBasicAuth apiKey = (HttpBasicAuth) apiClient
+        var apiKey = (HttpBasicAuth) apiClient
             .getAuthentication("api_key");
         apiKey.setUsername("YOUR_API_KEY");
 
         // or, configure Bearer (JWT) authorization: oauth2
         /*
-        HttpBearerAuth oauth2 = (HttpBearerAuth) apiClient
+        var oauth2 = (HttpBearerAuth) apiClient
             .getAuthentication("oauth2");
-
         oauth2.setBearerToken("YOUR_ACCESS_TOKEN");
         */
 
-        UnclaimedDraftApi unclaimedDraftApi = new UnclaimedDraftApi(apiClient);
+        var unclaimedDraftApi = new UnclaimedDraftApi(apiClient);
 
-        SubUnclaimedDraftTemplateSigner signer = new SubUnclaimedDraftTemplateSigner()
+        var signer = new SubUnclaimedDraftTemplateSigner()
             .role("Client")
             .name("George")
             .emailAddress("george@example.com");
 
-        SubCC cc1 = new SubCC()
+        var cc1 = new SubCC()
             .role("Accounting")
             .emailAddress("accouting@email.com");
 
-        UnclaimedDraftCreateEmbeddedWithTemplateRequest data = new UnclaimedDraftCreateEmbeddedWithTemplateRequest()
+        var data = new UnclaimedDraftCreateEmbeddedWithTemplateRequest()
             .clientId("1a659d9ad95bccd307ecad78d72192f8")
-            .templateIds(Arrays.asList("c26b8a16784a872da37ea946b9ddec7c1e11dff6"))
+            .templateIds(List.of("c26b8a16784a872da37ea946b9ddec7c1e11dff6"))
             .requesterEmailAddress("jack@dropboxsign.com")
-            .signers(Arrays.asList(signer))
-            .ccs(Arrays.asList(cc1))
+            .signers(List.of(signer))
+            .ccs(List.of(cc1))
             .testMode(true);
 
         try {
